# piscinePython

./: README.md
Module_0/ex00/: Hello.py
Module_0/ex01/: format_ft_time.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: ft_tqdm.py
ex09/: pyproject.toml
module-00/ex00/: Hello.py
module-00/ex02/: find_ft_type.py
module-00/ex04/: whatis.py
module-00/ex05/: building.py
module-00/ex06/: filterstring.py  ft_filter.py
module-00/ex07/: sos.py
module-00/ex08/: ft_tqdm.py
module-00/ex09/ex01/: format_ft_time.py
module-00/ex09/ex04/: whatis.py
module-00/ex09/ex08/: Loading.py
module-00/ex09/ft_package/: count_in_list.py  ft_package.py
module-01/ex00/: give_bmi.py  tester.py
module-01/ex01/: array2D.py  tester.py
module-01/ex02/: load_image.py  output.txt  tester.py
module-01/ex03/: load_image.py  zoom.py
module-01/ex04/: rotate.py  rotate2.py
module-01/ex05/: load_image.py  pimp_image.py  test
module-02/ex00/: load_csv.py
module-02/ex01/: aff_life.py  load_csv.py
